fix(kek) barrage

--- a/resources/[strin]/strin_deathscreen/client/web/index.html
+++ b/resources/[strin]/strin_deathscreen/client/web/index.html
@@ -12,10 +12,10 @@
 <body style="display: none;">
     <div id="deathscreen-container">
         <div id="deathscreen-title" class="deathscreen-colored-text">
-            JSI PORANĚN
+            JSI VÁŽNĚ ZRANĚN
         </div>
         <div id="deathscreen-subtitle">
-            <span id="deathscreen-distress">Stiskni <span class="deathscreen-colored-text">[E] (nebo jiné)</span> pro tísňové volání,</span> <span id="deathscreen-control">respawn možná za <span id="deathscreen-timer" class="deathscreen-colored-text">937</span> sekund.</span>
+            <span id="deathscreen-distress">Stiskni <span class="deathscreen-colored-text">[G]</span> pro tísňové volání,</span> <span id="deathscreen-control">respawn možná za <span id="deathscreen-timer" class="deathscreen-colored-text">937</span> sekund.</span>
         </div>
     </div>
     <script src="./index.js" type="text/javascript"></script>
