--- a/resources/[strin]/strin_deathscreen/client/web/index.html
+++ b/resources/[strin]/strin_deathscreen/client/web/index.html
@@ -15,7 +15,7 @@
             JSI VÁŽNĚ ZRANĚN
         </div>
         <div id="deathscreen-subtitle">
-            <span id="deathscreen-distress">Stiskni <span class="deathscreen-colored-text">[G]</span> pro tísňové volání,</span> <span id="deathscreen-control">respawn možná za <span id="deathscreen-timer" class="deathscreen-colored-text">937</span> sekund.</span>
+            <span id="deathscreen-distress">Stiskni <span class="deathscreen-colored-text">[G]</span> pro tísňové volání,</span></span>
         </div>
     </div>
     <script src="./index.js" type="text/javascript"></script>
