update(hud) new default position, background color setting

--- a/resources/[strin]/strin_hud/client/nui/index.html
+++ b/resources/[strin]/strin_hud/client/nui/index.html
@@ -60,8 +60,8 @@
                 <span id="speed"></span>
             </div>
             <div class="vehicle-attr">
-                <!--<i class="fas fa-gas-pump"></i>-->
-                PAL. <span id="fuel"></span>
+                <i class="fas fa-gas-pump"></i>
+                <span id="fuel"></span>
             </div>
             <div class="vehicle-attr" id="seatbelt">
                 <!--
@@ -132,16 +132,12 @@
                 
                 <div class="option">
                     <span>Skládat bary</span>
-                    <input type="checkbox" id="stack-input" checked></input>
+                    <input type="checkbox" id="stack-input"></input>
                 </div>
                 
                 <div class="option">
                     <span>Ukazatel - Ulice</span>
                     <input type="checkbox" id="street-input"></input>
-                </div>
-                <div class="option">
-                    <span>Barva - Pozadí</span>
-                    <input type="text" id="color-input"></input>
                 </div>
                 <div class="option">
                     <span>Stálé zobrazení ukazatelů</span>
@@ -150,6 +146,10 @@
                 <div class="option">
                     <span>Obtáhnutí</span>
                     <input type="checkbox" id="border-input"></input>
+                </div>
+                <div class="option">
+                    <span>Barva - Pozadí</span>
+                    <input type="text" id="color-input"></input>
                 </div>
                 <div class="option">
                     <span>Barva - Obtáhnutí</span>
