--- a/resources/[strin]/strin_hud/client/nui/index.html
+++ b/resources/[strin]/strin_hud/client/nui/index.html
@@ -60,7 +60,8 @@
                 <span id="speed"></span>
             </div>
             <div class="vehicle-attr">
-                <i class="fas fa-gas-pump"></i>
+                <!--<i class="fas fa-gas-pump"></i>-->
+                PAL. 
                 <span id="fuel"></span>
             </div>
             <div class="vehicle-attr" id="seatbelt">
