--- a/resources/[base]/esx_menu_default/html/ui.html
+++ b/resources/[base]/esx_menu_default/html/ui.html
@@ -1,7 +1,8 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="css/app.css" />
-		<link rel="stylesheet" href="fontawesome/all.css">
+		<!--<link rel="stylesheet" href="fontawesome/all.css">-->
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css" />
 	</head>
 	<body>
 		
