--- a/resources/[strin]/strin_skin/client/nui/index.html
+++ b/resources/[strin]/strin_skin/client/nui/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./css/reset.css" type="text/css">
     <link rel="stylesheet" href="./css/style.css" type="text/css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" type="text/javascript"></script>
-    <link href="./css/all.css" rel="stylesheet">
 </head>
 
 <body>
@@ -14,12 +14,12 @@
         <div id="menu-title-container">
             <span id="menu-label">Skin Menu</span></i>
         </div>
-        <i class="fa-solid fa-person"></i>
         <div id="menu-view-buttons-container">
             <div id="menu-head" class="menu-view-button"><i class="fas fa-user-tie"></i></div>
             <div id="menu-body" class="menu-view-button"><i class="fas fa-tshirt"></i></div>
             <div id="menu-pants" class="menu-view-button"><i class="fas fa-child"></i></div>
             <div id="menu-feet" class="menu-view-button"><i class="fas fa-shoe-prints"></i></div>
+            <div id="menu-handsup" class="menu-view-button"><i class="fa-solid fa-hands-holding"></i></div>
         </div>
         <div id="menu-skin-parts-container">
         </div>
